crates/mun_codegen/src/snapshots/test__binary_expressions_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn add(a:int, b:int):int {\n  a+b\n}\n\nfn subtract(a:int, b:int):int {\n  a-b\n}\n\nfn multiply(a:int, b:int):int {\n  a*b\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

