crates/mun_codegen/src/snapshots/test__bit_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn not(a: u128) -> u128 { !a }\npub fn bitand(a: u128, b: u128) -> u128 { a & b }\npub fn bitor(a: u128, b: u128) -> u128 { a | b }\npub fn bitxor(a: u128, b: u128) -> u128 { a ^ b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo*]

define i128 @not(i128) {
body:
  %not = xor i128 %0, -1
  ret i128 %not
}

define i128 @bitand(i128, i128) {
body:
  %bit_and = and i128 %0, %1
  ret i128 %bit_and
}

define i128 @bitor(i128, i128) {
body:
  %bit_or = or i128 %0, %1
  ret i128 %bit_or
}

define i128 @bitxor(i128, i128) {
body:
  %bit_xor = xor i128 %0, %1
  ret i128 %bit_xor
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::u128>::name" = private unnamed_addr constant [11 x i8] c"core::u128\00"
@"type_info::<core::u128>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\E67\1BU\E9k\95\93d\14}\1C\96S\95\F0", [11 x i8]* @"type_info::<core::u128>::name", i32 128, i8 8, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::u128>"]

