crates/mun_codegen/src/snapshots/test__compare_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn equals(a: u8, b: u8) -> bool { a == b }\npub fn not_equal(a: u8, b: u8) -> bool { a != b}\npub fn less(a: u8, b: u8) -> bool { a < b }\npub fn less_equal(a: u8, b: u8) -> bool { a <= b }\npub fn greater(a: u8, b: u8) -> bool { a > b }\npub fn greater_equal(a: u8, b: u8) -> bool { a >= b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [2 x %struct.MunTypeInfo*]

define i1 @equals(i8, i8) {
body:
  %eq = icmp eq i8 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i8, i8) {
body:
  %neq = icmp ne i8 %0, %1
  ret i1 %neq
}

define i1 @less(i8, i8) {
body:
  %less = icmp ult i8 %0, %1
  ret i1 %less
}

define i1 @less_equal(i8, i8) {
body:
  %lesseq = icmp ule i8 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i8, i8) {
body:
  %greater = icmp ugt i8 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i8, i8) {
body:
  %greatereq = icmp uge i8 %0, %1
  ret i1 %greatereq
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@"type_info::<core::u8>::name" = private unnamed_addr constant [9 x i8] c"core::u8\00"
@"type_info::<core::u8>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A0y\A7S\B6(n\F7f&H\E1\F9\AD\04>", [9 x i8]* @"type_info::<core::u8>::name", i32 8, i8 1, i8 0 }
@global_type_table = constant [2 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::bool>", %struct.MunTypeInfo* @"type_info::<core::u8>"]

